// Create a class AppConstants
class AppConstants {
  
  // Create a variable avengerServiceBaseUrl of type static const and assign the base url as value
  static const avengerServiceBaseUrl = "http://192.168.29.251:9999/api";

  // Create a variable avengerServiceGetAllAvengerEndPoint of type static const and assign the end point of get as value
  static const avengerServiceGetAllAvengerEndPoint = "/avengers";

  // Create a variable avengerServiceCreateNewHeroEndPoint of type static const and assign the end point of post as value
  static const avengerServiceCreateNewHeroEndPoint = "/add/avengers";

   // Create a variable avengerServiceEditHeroEndPoint of type statiic const and assign the end point of put as value
  static const avengerServiceEditHeroEndPoint = "/avengers";
}